# DeepResearch

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt  run.py
backend/app/: graph.py  llm.py  main.py  schema.py  state.py
backend/app/nodes/: clarify.py  direct_answer.py  executor.py  intent.py  planner.py  refine.py  reflect.py  reporter.py  retrieval.py
backend/app/retrieval/: vector_store.py
backend/app/tools/: search.py
backend/app/utils/: cache.py  report_qa.py  summary.py
docs/: pipeline-flow.md
test/: test_api.py  test_graph_wiring.py  test_nodes.py  test_qdrant.py  test_vector_store.py
